@@ -3,7 +3,7 @@ I could simply avoid adding extra space in the svg for these cases.
 
 * TODO Shortdoc
 
-* TODO handle large raise display properties
+* TODO Handle large raise display properties
 
 * TODO Handle italicized text
 
@@ -11,12 +11,6 @@ I could simply avoid adding extra space in the svg for these cases.
 
 * TODO Fix some issues in ascent
 Should be visible in the TODO face of this header.
-
-* TODO automatic modus compatibility?
-Alternatively, provide a function for it.
-
-* TODO Better default colors.
-Pull colors from default-face and ansi faces.
 
 * Testing
 ** TODO Deduplicate text- and overlay property tests
