@@ -2,6 +2,8 @@
 - Hats are now rendered for the last word of links in org-mode.
 - The default hat color and shape is now identified by the symbol
   ~default~.
+- When loading hatty, it will now try to pick colors appropriate for
+  the color theme of the user.
 
 * 0.2.2 [2024-09-04 Wed]
 - Fix rendering bug pertaining to the raise display property.
